<resources>
    <string name="app_name">QuickTouch</string>
    <string name="home">Home</string>
    <string name="operation">Operation</string>
    <string name="recent">Recent</string>
    <string name="function">Function</string>
    <string name="data">Data</string>
    <string name="wifi">WiFi</string>
    <string name="rotation">Rotation</string>
    <string name="gps">Location</string>
    <string name="flightmode">Flight mode</string>
    <string name="setting">Setting</string>
    <string name="silent">Silent</string>
    <string name="lock">Lock</string>
    <string name="notification">Notification</string>
    <string name="display">Display</string>
    <string name="sync">Sync</string>
    <string name="scrshot">ScrShot</string>
    <string name="tools">Tools</string>
    <string name="camera">Camera</string>
    <string name="phone">Phone</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="contact">Contact</string>
    <string name="more">More</string>
    <string name="alarm">Alarm</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bell">Bell</string>
    <string name="vibrate">Vibrate</string>
    <string name="exist">Shortcut already exists</string>
    <string name="chose">Please Choose</string>
</resources>
